modules/aws/route_tables/main.tf
# -------
# Public RT
# -------

resource "aws_route_table" "public" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.igw_id
  }

  tags = {
    Name = "${var.environment}-${var.project}-public-rt"
  }
}


# ------
# Private
# ------

resource "aws_route_table" "private" {
  vpc_id = var.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = var.nat_gateway_id
  }

  tags = {
    Name = "${var.environment}-${var.project}-private-rt"
  }
}
